--- a/insta/app/views/users/explores/show.html.erb
+++ b/insta/app/views/users/explores/show.html.erb
@@ -1,1 +1,4 @@
-<div></div>
+<div class="flex flex-row items-center w-full">
+    <%= link_to "For You", tabs_for_you_users_explore_path, class: "text-center block flex-1" %>
+    <%= link_to "Trending", tabs_trending_users_explore_path, class: "text-center block flex-1" %>
+</div>
