--- a/insta/app/views/layouts/users/application.html.erb
+++ b/insta/app/views/layouts/users/application.html.erb
@@ -75,7 +75,7 @@
               <% end %>
             </li>
             <li>
-              <%= link_to users_notifications_path, "aria-label": t('views.layouts.users.application.profile'), role: "link" do %>
+              <%= link_to users_account_path, "aria-label": t('views.layouts.users.application.profile'), role: "link" do %>
                 <div class="flex flex-row items-center gap-2 py-2 px-4">
                   <div>
                     <svg viewBox="0 0 24 24" aria-hidden="true" class="w-8 h-8">
